--- a/css/master.css
+++ b/css/master.css
@@ -1,10 +1,13 @@
+@import url(https://fonts.googleapis.com/css?family=Candal);
+
+
 body{
    margin: 0 auto;
 }
 .navDir{
    height: 20%;
    padding: 3%;
-   background: rgb(0,0,0);
+   background-image: url('/img/navFlowers.jpg');
    text-align: center;
    margin: 0 auto;
 }
@@ -14,14 +17,19 @@ body{
    margin: auto;
    cursor: pointer;
    background: rgb(58, 60, 58);
-   color: rgb(238, 7, 7);
+   color: rgb(67, 200, 236);
    border-radius: 49%;
    text-align: center;
 }
 .home{
    text-align: center;
-   background: rgb(116, 116, 117);
-   margin: -23px auto;
+   color: rgb(67, 200, 236);
+   font-family: Candal;
+   height: 500px;
+background-image: url("/img/clouds.png");   margin: 0 auto;
+}
+.home h1, h3{
+   text-shadow: 4px 3px rgb(236, 42, 145);
 }
 .footer{
    padding: 2%;
