--- a/css/master.css
+++ b/css/master.css
@@ -5,9 +5,11 @@ body{
    margin: 0 auto;
 }
 .navDir{
-   height: 20%;
+   height: 100%;
+   width: 100%;
    padding: 3%;
    background-image: url('/img/navFlowers.jpg');
+
    text-align: center;
    margin: 0 auto;
 }
@@ -25,14 +27,16 @@ body{
    text-align: center;
    color: rgb(67, 200, 236);
    font-family: Candal;
-   height: 500px;
-background-image: url("/img/clouds.png");   margin: 0 auto;
+   background-image: url("/img/clouds2.jpg");
+   width: 100%;
+   height: 100%;
 }
-.home h1, h3{
-   text-shadow: 4px 3px rgb(236, 42, 145);
+.home h1, h2{
+   text-shadow: 2px 2px rgb(246, 239, 243);
 }
 .footer{
    padding: 2%;
    background: rgb(0,0,0);
    text-align: center;
+   margin-top: -23px;
 }
