--- a/css/master.css
+++ b/css/master.css
@@ -9,9 +9,9 @@ body{
    width: 100%;
    padding: 3%;
    background-image: url('/img/navFlowers.jpg');
-
    text-align: center;
    margin: 0 auto;
+   /*position: fixed;*/
 }
 .navButton{
    padding: 2%;
@@ -22,12 +22,17 @@ body{
    color: rgb(67, 200, 236);
    border-radius: 49%;
    text-align: center;
+   margin-right: 5%;
+   /*display: flex;
+   align-content: center;
+   justify-content: center;
+   flex-direction: row;*/
 }
 .home{
    text-align: center;
-   color: rgb(67, 200, 236);
+   color: rgb(0, 0, 0);
    font-family: Candal;
-   background-image: url("/img/clouds2.jpg");
+   background-image: url("/img/purpclouds.jpg");
    width: 100%;
    height: 100%;
 }
@@ -38,5 +43,4 @@ body{
    padding: 2%;
    background: rgb(0,0,0);
    text-align: center;
-   margin-top: -23px;
 }
