--- a/css/master.css
+++ b/css/master.css
@@ -33,8 +33,8 @@ body{
    text-align: center;
    color: rgb(0, 0, 0);
    font-family: Candal;
-   width: 100%;
-   height: 100%;
+   /*width: 100%;
+   height: 100%;*/
 }
 .home h1, h2{
    text-shadow: 2px 2px rgb(246, 239, 243);
@@ -43,4 +43,18 @@ body{
    padding: 2%;
    background: rgb(0,0,0);
    text-align: center;
+   /*position: absolute;*/
+   width: 100%;
+   bottom: 0;
+   clear: both;
+}
+.memLeft{
+   float: left;
+   color: rgb(255, 255, 255);
+   text-shadow: 2px 2px rgb(102, 101, 102);
+}
+.memRight{
+   float: right;
+   color: rgb(255, 255, 255);
+   text-shadow: 2px 2px rgb(102, 101, 102);
 }
