--- a/css/master.css
+++ b/css/master.css
@@ -37,24 +37,21 @@ body{
    height: 100%;*/
 }
 .home h1, h2{
+   color: rgb(84, 84, 84);
    text-shadow: 2px 2px rgb(246, 239, 243);
 }
 .footer{
    padding: 2%;
    background: rgb(0,0,0);
    text-align: center;
-   /*position: absolute;*/
    width: 100%;
-   bottom: 0;
-   clear: both;
 }
-.memLeft{
-   float: left;
-   color: rgb(255, 255, 255);
-   text-shadow: 2px 2px rgb(102, 101, 102);
-}
-.memRight{
-   float: right;
+.memorial{
+   height: 100vh;
+   text-align: left;
+   margin-right: 10%;
+   margin-left: 10%;
+   text-decoration: none;
    color: rgb(255, 255, 255);
    text-shadow: 2px 2px rgb(102, 101, 102);
 }
