--- a/css/master.css
+++ b/css/master.css
@@ -33,25 +33,34 @@ body{
    text-align: center;
    color: rgb(0, 0, 0);
    font-family: Candal;
-   /*width: 100%;
-   height: 100%;*/
 }
 .home h1, h2{
    color: rgb(84, 84, 84);
    text-shadow: 2px 2px rgb(246, 239, 243);
+}
+
+.memorial{
+   /*height: 100vh;*/
+   margin: 0 auto;
+   text-decoration: none;
+   color: rgb(255, 255, 255);
+   text-shadow: 2px 2px rgb(102, 101, 102);
+}
+.memInput{
+   text-align: center;
+   margin: 0 auto;
+}
+.input{
+   width: 70%;
+   padding 12px 20px;
+   margin 8px 0;
+   box-sizing: border-box;
+   border: 2px dotted purple;
+   border-radius: 5px;
 }
 .footer{
    padding: 2%;
    background: rgb(0,0,0);
    text-align: center;
    width: 100%;
-}
-.memorial{
-   height: 100vh;
-   text-align: left;
-   margin-right: 10%;
-   margin-left: 10%;
-   text-decoration: none;
-   color: rgb(255, 255, 255);
-   text-shadow: 2px 2px rgb(102, 101, 102);
 }
