--- a/css/master.css
+++ b/css/master.css
@@ -1,20 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Candal);
 
-
-body{
-   margin: 0 auto;
-   background-image: url("/img/purpclouds.jpg");
 }
 #wrapper{
    margin: 0 auto;
 }
 .navDir{
-   /*width: 100%;*/
    padding: 3%;
    background-image: url('/img/navFlowers.jpg');
    text-align: center;
-   /*display: flex;
-   justify-content: space-around;*/
 }
 .Button{
    padding: 2%;
@@ -28,18 +21,22 @@ body{
    text-align: center;
    color: rgb(0, 0, 0);
    font-family: Candal;
+   background-image: url("/img/purpclouds.jpg");
 }
 .home h1, h2{
    color: rgb(84, 84, 84);
    text-shadow: 2px 2px rgb(246, 239, 243);
+   margin: 0 auto;
+   padding: 5%;
 }
 
 #carousel{
    text-align: center;
-   margin: auto;
+   margin: 0 auto;
    font-family: canal;
    font-size: 14px;
    color: white;
+   background: purple;
 }
 .carouselButtons{
    text-align: center;
@@ -48,7 +45,9 @@ body{
 .carouselPhoto{
    margin: 0 auto;
    text-align: center;
-   margin-bottom: 5%;
+}
+.memorial{
+   background-color: purple;
 }
 .memorial h2{
    margin: 0 auto;
@@ -82,9 +81,8 @@ body{
    font-family: candal;
 }
 .memPost{
-   background: white;
-   margin: 5%;
-   padding: 2%;
+   background: purple;
+   padding: 5%;
    color: black;
    text-shadow: none;
 }
@@ -104,7 +102,6 @@ body{
 }
 
 .footer{
-   /*width: 100%;*/
    padding: 5%;
    background-image: url('/img/navFlowers.jpg');
    display: flex;
